@@ -28,10 +28,10 @@ public class OutputTests {
         printer.append("Just some input to check if file is not empty");
 
         File file = new File(TEST_FILE_PATH);
-        assertThat("File does not exist",  file, anExistingFile());
+        assertThat("File does not exist", file, anExistingFile());
         assertThat("File is not readable", file, aReadableFile());
 
-        String content = Files.readString(Paths.get(TEST_FILE_PATH));
+        String content = new String(Files.readAllBytes(Paths.get(TEST_FILE_PATH)));
 
         assertThat("File is unexpectedly empty", (null != content) && (content.length() > 0));
     }
